@@ -223,6 +223,7 @@ Solve a least-squares problem:
 >>> residualFunction = ot.SymbolicFunction(['x0', 'x1'], ['10*(x1-x0^2)', '1-x0'])
 >>> problem = ot.LeastSquaresProblem(residualFunction)
 >>> problem.setBounds(ot.Interval([-3.0] * dim, [5.0] * dim))
+>>> ot.ResourceMap.AddAsScalar('Ceres-gradient_tolerance', 1e-5)  # doctest: +SKIP
 >>> algo = ot.Ceres(problem, 'LEVENBERG_MARQUARDT')  # doctest: +SKIP
 >>> algo.setStartingPoint([0.0] * dim)  # doctest: +SKIP
 >>> algo.run()  # doctest: +SKIP
@@ -235,6 +236,7 @@ Or, solve a general optimization problem:
 >>> dim = 4
 >>> linear = ot.SymbolicFunction(['x1', 'x2', 'x3', 'x4'], ['(x1-1)^2+(x2-2)^2+(x3-3)^2+(x4-4)^2'])
 >>> problem = ot.OptimizationProblem(linear)
+>>> ot.ResourceMap.AddAsScalar('Ceres-gradient_tolerance', 1e-5)  # doctest: +SKIP
 >>> algo = ot.Ceres(problem, 'BFGS')  # doctest: +SKIP
 >>> algo.setStartingPoint([0.0] * 4)  # doctest: +SKIP
 >>> algo.run()  # doctest: +SKIP
