@@ -18,6 +18,7 @@
 === Bug fixes ===
  * #1267 (Some CSV files cannot be imported)
  * #1507 (Leak in Collection typemaps)
+ * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 
 
 == 1.15 release (2020-05-25) == #release-1.15
